--- a/src_backend/PetCareAppMVC/PetCareAppMVC.csproj
+++ b/src_backend/PetCareAppMVC/PetCareAppMVC.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Camunda.Api.Client" Version="2.5.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.8" />
